--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "graphql": "^16.8.1",
     "graphql-http": "^1.22.0",
+    "joi": "^17.12.2",
     "pg-promise": "^11.5.5",
     "ruru": "^2.0.0-beta.11"
   },
