--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql": "^16.8.1",
     "graphql-http": "^1.22.0",
     "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
     "pg-promise": "^11.5.5",
     "ruru": "^2.0.0-beta.11"
   },
